(lang dune 3.4)

(name why3while)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Troels Korreman Nielsen")

;(maintainers "Maintainer Name")

(license GPL2)

;(documentation https://url/to/documentation)

(package
 (name why3while)
 (synopsis "A why3 plugin for a While language")
 (description "Insert longer description")
 (depends
  (why3 (= 1.5.1))
  (mparser (= 1.3)))
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
